force-app/main/default/objects/Purchase_Quotation_Line__c/Purchase_Quotation_Line__c.object-meta.xml
<CustomObject>
    <label>Purchase Quotation Line</label>
    <nameField>
        <displayFormat>PQL-{00000000}</displayFormat>
        <label>Purchase Quotation Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Quotation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>