force-app/main/default/objects/Purchase_Quotation_Line__c/fields/Purchase_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Quotation__c</fullName>
    <label>Purchase Quotation</label>
    <referenceTo>Purchase_Quotation__c</referenceTo>
    <relationshipLabel>Purchase Quotation Lines</relationshipLabel>
    <relationshipName>Purchase_Quotation_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>